# SPM

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build_and_run.sh  build_and_run_slurm.sh  cmake_install.cmake  main.cpp  test_distributed.cpp  test_parallel.cpp  test_sequential.cpp
results/: sequential.csv
scripts/: plot.py  statistics.py
src/fastflow/: ffmatrix.h  parallel.cpp  parallel.h
src/mpi/: distributed.cpp  distributed.h  mpimatrix.h
src/sequential/: matrix.h  seqmatrix.h  sequential.cpp  sequential.h
src/utils/: csv.h  matrix.h  timer.h
